--- a/2012147562/developer.html
+++ b/2012147562/developer.html
@@ -7,7 +7,7 @@
     <title>My TOUR(개발자소개)</title> <!-- 타이틀 바에 표시할 title -->
     <link rel="stylesheet" href="css/bootstrap.css"> <!-- 요구사항 : 부트스트랩 사용을 위한 link -->
 
-    <link rel="stylesheet" media="screen and (max-width:480px)" type="text/css" href="css/mobileStyle.css"/> <!-- 요구사항 : media query -->
+    <link rel="stylesheet" media="screen and (max-width:480px)" type="text/css" href="css/mobilestyle.css"/> <!-- 요구사항 : media query -->
     <link rel="stylesheet" media="screen and (min-width:481px)" type="text/css" href="css/style.css"/> <!-- 요구사항 : external css 스타일시트 적용 -->
     <!-- 요구사항 : media query를 사용하여 서로 다른 크기의 브라우저(PC, 모바일)에 대해 별도의 스타일시트 적용-->
 
