--- a/2012147562/intro.html
+++ b/2012147562/intro.html
@@ -7,7 +7,7 @@
     <title>My TOUR(페이지소개)</title> <!-- 타이틀 바에 표시할 title -->
     <link rel="stylesheet" href="css/bootstrap.css"> <!-- 요구사항 : 부트스트랩 사용을 위한 link -->
 
-    <link rel="stylesheet" media="screen and (max-width:480px)" type="text/css" href="css/mobileStyle.css"/>
+    <link rel="stylesheet" media="screen and (max-width:480px)" type="text/css" href="css/mobilestyle.css"/>
     <link rel="stylesheet" media="screen and (min-width:481px)" type="text/css" href="css/style.css"/> <!-- 요구사항 : external css 스타일시트 적용 -->
     <!-- 요구사항 : media query를 사용하여 서로 다른 크기의 브라우저(PC, 모바일)에 대해 별도의 스타일시트 적용-->
 
@@ -104,7 +104,7 @@
                 <br><br><br>
 
                 이제 패키지여행의 편리함과 자유여행의 만족감을 동시에 느껴보세요!
-          
+
             </div>
           </article>
       </section>
