--- a/2012147562/register.html
+++ b/2012147562/register.html
@@ -7,7 +7,7 @@
     <title>My TOUR(회원가입)</title> <!-- 타이틀 바에 표시할 title -->
     <link rel="stylesheet" href="css/bootstrap.css"> <!-- 요구사항 : 부트스트랩 사용을 위한 link -->
 
-    <link rel="stylesheet" media="screen and (max-width:480px)" type="text/css" href="css/mobileStyle.css"/> <!-- 요구사항 : media query -->
+    <link rel="stylesheet" media="screen and (max-width:480px)" type="text/css" href="css/mobilestyle.css"/> <!-- 요구사항 : media query -->
     <link rel="stylesheet" media="screen and (min-width:481px)" type="text/css" href="css/style.css"/> <!-- 요구사항 : external css 스타일시트 적용 -->
     <!-- 요구사항 : media query를 사용하여 서로 다른 크기의 브라우저(PC, 모바일)에 대해 별도의 스타일시트 적용-->
 
@@ -30,6 +30,31 @@
           to {left: 100px;}
       }
 
+      table, th, td {
+       border: 1px solid #bcbcbc;
+       text-align: center;
+      }
+
+      #purple{
+        background-color: purple;
+      }
+
+      .skyblue{
+        background-color: skyblue;
+        width: 15%;
+      }
+
+      #idval{
+        width:50%;
+      }
+
+      table.register {
+        width:80%;
+        height:450px;
+        border: 2px solid #000;
+        margin-left: auto;
+        margin-right: auto;
+      }
     </style>
   </head>
 
@@ -55,46 +80,232 @@
       </ul>
     </nav>
 
+
+
     <section>
       <br><br><br><br><br>
       <article>
+        <form id="registerform">
+            <table class="register">
+                <tr>
+                    <td colspan="3" id="purple"><B>기본 정보</B></td>
+                </tr>
+                <tr>
+                    <td class="skyblue"><b>사용자ID:</b></td>
+                    <td><input type="text" name="userid" id="userid" size="20"></td>
+                    <td id="idval"></td>
+                </tr>
+                <tr>
+                    <td class="skyblue"><b>비밀번호:</b></td>
+                    <td><input type="password" name="userpwd" id="userpwd" size="20"></td>
+                    <td id="pwdval"></td>
+                </tr>
+                <tr>
+                    <td  class="skyblue"><b>생년월일:</b></td>
+                    <td><input type="text" name="birthday" id="birthday" size="20" placeholder="yyyy-mm-dd"></td>
+                    <td id="birthval"></td>
+                </tr>
+                <tr>
+                    <td class="skyblue"><b>휴대전화번호:</b></td>
+                    <td><input type="text" name="usertel" id="usertel" size="20" placeholder="###-####-####"></td>
+                    <td id="telval"></td>
+                </tr>
+                <tr>
+                    <td class="skyblue"><b>E-mail:</b></td>
+                    <td><input type="text" name="useremail" id="useremail" size="20" placeholder="abcde@abcd.com"></td>
+                    <td id="emailval"></td>
+                </tr>
 
-        <form method = "post" action = "1.html">
-          <p>
-            <label>아이디:
-              <input type = "text" autofocus required /> <!-- 요구사항 : autofocus  -->
-
-            </label>
-          </p>
-          <p>
-            <label>비밀번호:
-              <input type = "password" required /> <!-- 요구사항 : required  -->
-
-            </label>
-          </p>
-
-          <p>
-            <label>주민번호 : <input type = "text" name = "security_number"
-                    pattern = "\d{6}\-\d{7}"
-                    title = "123456-1234567 형식으로 입력해주세요"/><br><br>
-            </label>
-
-          </p>
-
-          <p>
-            <label>Email:
-              <input type = "email" placeholder="name@domain.com" required /> (name@domain.com)<!-- 요구사항 : placeholder  -->
-            </label>
-          </p>
+              </table>
+              <br><br>
+              <button type="button" onclick="myfunc()">회원가입</button>
+              <input type="reset" value="다시 입력">
+              <button type="button" onclick="rulecheck()">유효성 검사조건</button>
+              <p id="response"></p>
+          </form>
           <br><br>
-          <p>
 
-              <button type="button" id="jq_oversea_search" class="btn-danger" onclick="location.href='index.html'">가입하기</button>
-              <input type="reset" value="clear" />
+          <script> // 요구기술 : HTML DOM API
+            var input1 = document.getElementById('userid'); //userid element를 HTML DOM API를 사용하여 input1 변수에 assign
+            //input1.addEventListener('change', function(){document.getElementById('idval').innerHTML="good!"; alert('hi1'); });
+            input1.addEventListener('change', function(){ validation1(event.target.value); }); // 요구기술 : JavaScript event
+            function validation1(value){//userid element의 값이 change됐을때 event처리
 
-          </p>
+              var check1=false, check2=false; // check1은 숫자가 적어도 한 개 이상 포함되었는지 체크하기 위한 boolean변수
+              // check2는 대문자가 적어도 한 개 이상 포함되었는지 체크하기 위한 boolean변수
 
-        </form>
+              //userid의 길이(6~10자) 검사.
+              //document.getElementById('idval').innerHTML=event.target.value.length;
+              if (value.length<6 || value.length>10) {
+                  document.getElementById('idval').innerHTML="사용자ID 길이는 6자~10자만 가능합니다. 현재길이 : " + value.length;
+
+                  return false;
+              }
+              for (i = 0; i < value.length; i++) { //영문 대소문자, 숫자와 특수기호(_)만 사용 가능 조건 검사
+                ch = value.charAt(i)
+                if (!(ch=='_') && !(ch >= '0' && ch <= '9') && !(ch >= 'a' && ch <= 'z') && !(ch >= 'A' && ch <= 'Z')) {
+                  //사용자 ID 데이터로 입력 가능한 모든 문자들을 제외한 다른 문자가 입력됨.
+                  document.getElementById('idval').innerHTML="아이디에 불가능한 입력이 있습니다: " + ch;
+                  return false;
+                }
+                if(ch >= '0' && ch <= '9'){ // 적어도 한 개의 숫자 포함
+                  check1 = true;
+                }
+                if(ch >= 'A' && ch <= 'Z'){ // 적어도 한 개의 대문자 포함
+                  check2 = true;
+                }
+              }
+              if(check1 == false){ // 데이터 중 숫자데이터가 한 개도 존재하지 않음.
+                document.getElementById('idval').innerHTML="적어도 한 개의 숫자를 포함하세요";
+                return false;
+              }
+              if(check2 == false){ // 데이터 중 대문자 데이터가 한 개도 존재하지 않음.
+                document.getElementById('idval').innerHTML="적어도 한 개의 대문자 포함하세요";
+                return false;
+              }
+              document.getElementById('idval').innerHTML="good!"; // 모든 유효성 검사 조건을 통과하면 good! 메세지를 출력함
+              return true;
+            }
+            var input2 = document.getElementById('userpwd');
+            input2.addEventListener('change', function(){ validation2(event.target.value); });
+            function validation2(value){//userpwd element의 값이 change됐을때 event처리
+              //userpwd의 길이(6~10자) 검사.
+              if (value.length<6 || value.length>10) {
+                  document.getElementById('pwdval').innerHTML="비밀번호 길이는 6자~10자만 가능합니다. 현재길이 : " + value.length;
+                  return false;
+              }
+
+              for (i = 0; i < value.length; i++) { //같은 문자가 3번이상 사용됐는지 검사
+
+                ch = value.charAt(i)
+                var cnt = 0;
+                for(j=0; j<value.length; j++) { // 비밀번호 전체에서 현재 문자가 몇번 사용됐는지를 카운트한다.
+                  if(value.charAt(j) == ch){
+                    cnt++;
+                  }
+                }
+                if(cnt>=3) // 카운트 횟수가 3회 이상(즉 같은문자가 3번이상 사용됨)이면 false를 리턴한다.
+                {
+                  document.getElementById('pwdval').innerHTML="같은 문자나 숫자가 3회이상 반복됐습니다: " + ch;
+                  return false;
+                }
+              }
+              for (i = 1; i < value.length-1; i++){  //연속된 문자열 존재여부 검사 (아스키코드의 차이로 검사함)
+                if((value.charAt(i)>='1' && value.charAt(i)<='8') || (value.charAt(i)>='B' && value.charAt(i)<='Y') || (value.charAt(i)>='b' && value.charAt(i)<='y'))
+                { // 이 범위를 만족하지 않으면 특수문자를 포함하고, 아스키코드 값의 차이조건을 만족하더라도 특수문자가 포함되면 연속된 문자열로 보지 않는다.
+                  if(value.charCodeAt(i)-value.charCodeAt(i-1) == 1 && value.charCodeAt(i+1)-value.charCodeAt(i) == 1)
+                  {// 아스키코드가 1차이로 연속됨 (ex. abc)
+                      document.getElementById('pwdval').innerHTML="연속된 문자열이 있습니다: " + value.charAt(i-1) + value.charAt(i) + value.charAt(i+1);
+                      return false;
+                  }
+                  if(value.charCodeAt(i)-value.charCodeAt(i-1) == -1 && value.charCodeAt(i+1)-value.charCodeAt(i) == -1)
+                  {// 아스키코드가 -1차이로 연속됨 (ex. cba)
+                    document.getElementById('pwdval').innerHTML="연속된 문자열이 있습니다: " + value.charAt(i-1) + value.charAt(i) + value.charAt(i+1);
+                    return false;
+                  }
+                }
+              }
+              document.getElementById('pwdval').innerHTML="good!";// 모든 조건 만족시 'good!' 메세지를 표시하며 유효성검사 통과
+              return true;
+            }
+            var input3 = document.getElementById('birthday');
+            input3.addEventListener('change', function(){ validation3(event.target.value); });
+            function validation3(value){
+              var pattern=new RegExp(/^(19|20)\d{2}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[0-1])$/);
+              //생년월일은 regular expression을 사용하여 유효성검사 함.
+            	if(!pattern.test(value)) // 지정해준 regular expression을 만족하는지 여부를 검사함.
+              {
+                document.getElementById('birthval').innerHTML="생년월일의 형식이나 값을 확인해주세요.";
+                return false;
+              }
+              document.getElementById('birthval').innerHTML="good!";
+              return true;
+            }
+            var input4 = document.getElementById('usertel');
+            input4.addEventListener('change', function(){ validation4(event.target.value); });
+            function validation4(value){
+              var pattern=new RegExp(/^\d{3}-\d{3,4}-\d{4}$/);
+              //휴대전화번호는 regular expression을 사용하여 유효성검사 함.
+              if(!pattern.test(value)) // 지정해준 regular expression을 만족하는지 여부를 검사함.
+              {
+                document.getElementById('telval').innerHTML="휴대전화번호 형식을 확인하세요";
+                return false;
+              }
+              document.getElementById('telval').innerHTML="good!";
+              return true;
+            }
+            var input5 = document.getElementById('useremail'); //useremail element를 HTML DOM API를 사용하여 input4변수에 assign
+            input5.addEventListener('change', function(){ validation5(event.target.value); });
+            function validation5(value){
+              var pattern=new RegExp(/^[A-Za-z0-9_\.\-]+@[A-Za-z0-9\-]+\.[A-Za-z0-9\-]+/);
+              //E-mail주소는 regular expression을 사용하여 유효성검사 함.
+            	if(!pattern.test(value)) // 지정해준 regular expression을 만족하는지 여부를 검사함.
+              {
+                document.getElementById('emailval').innerHTML="메일주소 형식을 확인하세요";
+                return false;
+              }
+              document.getElementById('emailval').innerHTML="good!";
+              return true;
+            }
+
+
+            function myfunc(){
+              if(validation1(registerform.userid.value) && validation2(registerform.userpwd.value) &&
+              validation3(registerform.birthday.value) && validation4(registerform.usertel.value) && validation5(registerform.useremail.value)){
+                // 모든 form 입력값들이 유효성 검사를 통과함
+                var xhr = new XMLHttpRequest(); // 요구기술 : AJAX
+                xhr.open("POST", "http://165.132.105.212/~icl/project2.php"); // request를 보낼 URL과 방식(POST)를 지정함
+                xhr.onreadystatechange = function(){ // readyState property가 변경되었을 때 호출될 함수를 정의함
+                  if(xhr.readyState === 4 && xhr.status === 200){ // readyState가 4라는 것은 request가 finish되고 response가 준비됨을 의미함
+                    // status가 200이라는 것은 request가 잘 처리되었음을 의미함.
+                    document.getElementById("response").innerHTML = xhr.responseText; //response라는 <p>엘리먼트 안에 responseText를 표시하도록 설정함
+                  }
+                }
+                xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
+
+                var obj = new Object(); // JSON object를 생성함
+                obj.id = registerform.userid.value;
+                obj.pw = registerform.userpwd.value;
+                obj.birth = registerform.birthday.value;
+                obj.email = registerform.useremail.value;
+                obj.tel = registerform.usertel.value; // object의 key와 value pair들을 assign함.
+                var json_data = JSON.stringify(obj); // JSON을 이용하여 서버에 데이터를 전송하기 위해 string으로 변환해주는 stringify 함수를 사용하고 있음.
+                var STRING_DATA = 'data='+json_data; // 서버에서 요구하는 데이터 형식을 맞춰주고 있음.
+                // 요구기술 : JSON
+                xhr.send(STRING_DATA);
+              }
+              else { // 유효성검사조건을 하나라도 만족하지 않은 상태에서 회원가입 버튼을 누르면 클라이언트 사이드에서 alert메시지를 표시해 다시 입력하도록 함.
+                document.getElementById("response").innerHTML = "입력데이터를 확인하세요";
+                alert("적절하지 않은 입력값이 있습니다.");
+              }
+            }
+
+            function rulecheck(){
+              var parser, xmlDoc;
+              var text = "<result>"+
+                  "<id>ID : 6~10자의 영문 대소문자, 숫자와 특수기호(_)만 사용 가능하고, 적어도 1개의 숫자와 대문자를 포함한다.</id>" +
+                  "<pwd>비밀번호 : 6~10자 영문 대소문자, 숫자, 특수문자를 포함할 수 있다. 또한 동일한 숫자  및 문자를 " +
+                  "3회 이상 사용할 수 없으며, 연속한 문자열(123, 321, abc, cba 등)을 사용할 수 없다. </pwd>" +
+                  "<birth>생년월일 : 'yyyy-mm-dd' 형식으로 생년월일로 가능한 날짜(너무 과거 혹은 미래 날짜 불가능)를 입력한다.</birth>" +
+                  "<tel>휴대전화번호 : '###-####-####' 형식으로, 가운데 네자리는 세자리로 입력할수도 있다.</tel>" +
+                  "<email>E-mail : '(알파벳,숫자,_,.,-)@(알파벳,숫자,-).(알파벳,숫자,-)' 형식으로 '@'와 '.'을 포함한다.</email>" +
+                "</result>"; //XML로 parsing하기 위한 xml string을 생성중. 사용자가 유효성검사 규칙을 확인할 수 있도록 그 내용을 담고있다.
+
+              parser = new DOMParser(); // xml을 parsing하기 위해 parser생성
+              xmlDoc = parser.parseFromString(text,"text/xml"); // xml string을 xml document로 parsing
+
+              var rule = "기본정보 입력 규칙 :\n" ; // 요구기술 : XML DOM API
+              rule += xmlDoc.getElementsByTagName("id")[0].childNodes[0].nodeValue + "\n";
+              rule += xmlDoc.getElementsByTagName("pwd")[0].childNodes[0].nodeValue + "\n";
+              rule += xmlDoc.getElementsByTagName("birth")[0].childNodes[0].nodeValue + "\n";
+              rule += xmlDoc.getElementsByTagName("tel")[0].childNodes[0].nodeValue + "\n";
+              rule += xmlDoc.getElementsByTagName("email")[0].childNodes[0].nodeValue + "\n";
+              //XML DOM API를 사용하여 xml에 저장된 데이터를 가져오고 rule변수에 저장하고 있음.
+              alert(rule);
+            }
+
+
+          </script>
 
         </article>
     </section>
